# MillenniumRun

./: .gitignore  AssetLists.txt  Cargo.toml  README.md  build.rs
assets/scripts/: kor.ron
assets/shaders/: bullet.wgsl  font.wgsl  sprite.wgsl  test.wgsl  text_2d.wgsl  text_3d.wgsl  tile.wgsl  ui.wgsl
assets/textures/: button.dds  logo.dds  midori_player.dds  momoi_player.dds  tile.dds
assets/textures/character/: aris_player.dds  midori_player.dds  momoi_player.dds  yuzu_player.dds
assets/textures/enemy/: yuuka.dds  yuuka_bullet.dds
assets/textures/etc/: aris_bullet.dds  midori_bullet.dds  momoi_bullet.dds  yuzu_bullet.dds
assets/textures/sys/: logo.dds
assets/textures/ui/: button_etc.dds  button_info.dds  button_medium.dds  button_return.dds  button_wide.dds  finish.dds  heart.dds  logo.dds  title_button_exit.dds  title_button_setting.dds  title_button_start.dds  window_ratio_8_1.dds
proposal/: README.md
src/: framework.rs  main.rs  mesh.rs  resolution.rs  timer.rs  user_setting.rs
src/app/: abort.rs  device.rs  locale.rs  main_loop.rs  message.rs  mod.rs  resolution.rs  running_flag.rs  timer.rs  user_setting.rs
src/assets/: bundle.rs  cache.rs  error.rs  handle.rs  integrity.rs  interface.rs  list.rs  mod.rs  path.rs  types.rs  watcher.rs
src/components/: anchor.rs  boss.rs  bullet.rs  camera.rs  control.rs  font.rs  interpolation.rs  lights.rs  map.rs  margin.rs  mod.rs  object.rs  player.rs  save.rs  script.rs  sound.rs  sprite.rs  table.rs  text.rs  transform.rs  ui.rs  user.rs
src/components/collider2d/: mod.rs  shape.rs
src/components/collision2d/: aabb.rs  hull.rs  mod.rs
src/components/sprite/: brush.rs  mod.rs  objects.rs
src/components/text/: brush.rs  character.rs  font.rs  mod.rs  pipeline.rs  section.rs  texture.rs  uniform.rs  vertex.rs
src/components/text2d/: brush.rs  character.rs  font.rs  mod.rs  section.rs
src/components/ui/: anchor.rs  brush.rs  mod.rs  objects.rs  pipeline.rs  uniform.rs  vertex.rs
src/game/: mod.rs
src/game/assets/: shader.rs
src/game/init/: scene.rs
src/logic/: camera.rs  main_loop.rs  mod.rs  object.rs  resource.rs  scene.rs  ui.rs
src/nodes/: mod.rs
src/nodes/credit/: mod.rs
src/nodes/entry/: mod.rs  ui.rs
src/nodes/first_time/: mod.rs  res.rs  ui.rs
src/nodes/first_time/state/: exit.rs  mod.rs  wait.rs
src/nodes/in_game/: mod.rs
src/nodes/in_game/state/: appear_result.rs  disappear_run.rs  enter.rs  enter_msgbox.rs  enter_pause.rs  enter_setting.rs  exit.rs  exit_msgbox.rs  exit_pause.rs  exit_setting.rs  finish.rs  mod.rs  msgbox.rs  pause.rs  ready.rs  result.rs  run.rs  setting.rs  spawn.rs  wait_for_finish.rs
src/nodes/in_game/utils/: background.rs  mod.rs
src/nodes/intro/: mod.rs  res.rs
src/nodes/intro/state/: appear_logo.rs  disappear_notify.rs  display_logo.rs  display_notify.rs  fade_in.rs  fade_out.rs  mod.rs  play_title_voice.rs  wait_loading.rs
src/nodes/setup/: mod.rs  parser.rs  res.rs
src/nodes/test/: mod.rs
src/nodes/title/: mod.rs  res.rs  ty.rs
src/nodes/title/state/: dev.rs  enter.rs  enter_msgbox.rs  enter_selected.rs  enter_setting.rs  enter_stage.rs  enter_viewer.rs  entry.rs  exit_msgbox.rs  exit_selected.rs  exit_setting.rs  exit_stage.rs  exit_viewer.rs  menu.rs  mod.rs  msgbox.rs  return_stage.rs  selected.rs  setting.rs  stage.rs  tutorial0.rs  tutorial1.rs  tutorial2.rs  tutorial3.rs  viewer.rs
src/nodes/title/ty/: background.rs  exit.rs  menu.rs  mod.rs  setting.rs  sprite.rs  stage.rs  system.rs
src/nodes/title/utils/: buttons.rs  mod.rs  sprite.rs  window.rs
src/render/: depth.rs  descriptor.rs  identifier.rs  initialize.rs  main_loop.rs  material.rs  message.rs  mod.rs  render_loop.rs  shader.rs  task.rs  texture.rs
src/render/objects/: bind_group_layout.rs  buffer.rs  mod.rs  pipeline.rs  pipeline_layout.rs  shader.rs  texture.rs  texture_view.rs
src/scene/: node.rs  state.rs
src/system/: error.rs  event.rs  mod.rs  shared.rs  timer.rs
