[package]
name = "MillenniumRun"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
authors = ["HK416 <powerspirit127@gmail.com>", ]
description = """
    KOR: Nexon Games가 제작한 Blue Archive의 팬 제작 2차 창작 게임.
    EN: A fan-made secondary creation game from the Blue Archive, produced by Nexon Games.
"""
publish = false

[dependencies]
ron = "0.8.*"
serde = { version = "1.0.*", features = ["derive"] }
async-std = "1.*"
lazy_static = "1.4.*"

wgpu = "0.17.*" # Graphics crate
winit = "0.28.*" # Window crate
rodio = "0.17.*" # Sound crate
ab_glyph = "0.2.*" # Font crate
glam = { version = "0.24.*", features = ["debug-glam-assert"] } # Math crate
