[package]
name = "MillenniumRun"
version = "0.1.1"
edition = "2021"
rust-version = "1.71"
authors = ["HK416 <powerspirit127@gmail.com>", ]
description = """
    KOR: Nexon Games가 제작한 Blue Archive의 팬 제작 2차 창작 게임.
    EN: A fan-made secondary creation game from the Blue Archive, produced by Nexon Games.
"""
build = "build.rs"
publish = false


[dependencies]
log = "0.4.*" # MIT or Apache-2.0 license.
env_logger = "0.10.*" # MIT or Apache-2.0 license.
ron = "0.8.*" # MIT or Apache-2.0 license.
serde = { version = "1.0.*", features = ["derive"] } # MIT or Apache-2.0 license.
bytemuck = "1.13.*" # MIT or Apache-2.0 or Zlib
async-std = "1.*" # MIT or Apache-2.0 license.
lazy_static = "1.4.*" # MIT or Apache-2.0 license.
notify = "6.0.*" # CC0-1.0 or Artistic-2.0 license.
rust-embed = { version = "6.8.*", features = ["debug-embed", "interpolate-folder-path", "include-exclude"] } # MIT license.
sha2 = "0.10.*" # MIT or Apache-2.0 license.
raw-window-handle = "0.5.*" # MIT or Apache-2.0 or Zlib
crossbeam = "0.8.*" # MIT or Apache-2.0 license.

egui = "0.22.*" # UI crate / MIT or Apache-2.0 license.
wgpu = "0.17.*" # Graphics crate / MIT or Apache-2.0 license.
winit = "0.28.*" # Window crate / Apache-2.0 license.
rodio = "0.17.*" # Sound crate / MIT or Apache-2.0 license.
ab_glyph = "0.2.*" # Font crate / Apache-2.0 license.
glam = { version = "0.24.*", features = ["debug-glam-assert"] } # Math crate / MIT or Apache-2.0 license.
native-dialog = "0.6.*" # Window Dialog crate / MIT license.


[build-dependencies]
sha2 = "0.10.*" # MIT or Apache-2.0 license.
fs_extra = "1.3.*" # MIT license.
path-clean = "1.0.*" # MIT or Apache-2.0 license.
lazy_static = "1.4.*" # MIT or Apache-2.0 license.
